<resources>
    <string name="app_name">Gaze Aware Camera</string>
    <string name="button1">Album</string>
    <string name="button2">Camera</string>
    <string name="button3">Menu</string>

    <string name="face_counter">Number of faces detected: %1$d</string>
    <string name="gaze_counter">Number of faces looking toward the camera: %1$d</string>

    <string name="item1">1</string>
    <string name="item2">2</string>
    <string name="item3">3</string>
    <string name="item4">4</string>
</resources>