<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.GazeAwareCamera.FullscreenContainer"
    tools:context=".FullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <androidx.camera.view.PreviewView
        android:id="@+id/fullscreenContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        android:visibility="visible">
    </androidx.camera.view.PreviewView>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/fullscreen_content_controls"
                style="@style/Widget.Theme.GazeAwareCamera.ButtonBar.Fullscreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/containerLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom|center_horizontal"
                    android:baselineAligned="false"
                    android:weightSum="3">

                    <LinearLayout
                        android:id="@+id/button1Container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/button1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:onClick="openAlbum"
                            android:text="@string/button1"
                            tools:ignore="UsingOnClickInXml" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/button2Container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/button2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:onClick="menu"
                            android:text="@string/button2"
                            tools:ignore="UsingOnClickInXml" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/button3Container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/button3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/button3" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>


            <!--<Button
                    android:id="@+id/dummy_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="800dp"
                    android:layout_height="525dp"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="bottom"
                    android:layout_marginEnd="-5dp"
                    android:text="@string/dummy_button" />

                <Button
                    android:id="@+id/dummy_button3"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="800dp"
                    android:layout_height="525dp"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="bottom"
                    android:layout_marginEnd="-5dp"
                    android:text="@string/dummy_button3" />
                    -->
        </LinearLayout>


    <!--
    <Button
        android:id="@+id/photo_capture_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center" />
    -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

</FrameLayout>